# sds-client

./: .gitlab-ci.yml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml
docs/: BeamInfo.md  Collector.md  CollectorIdList.md  CollectorsApi.md  DataseDefinition.md  Dataset.md  DatasetsApi.md  EventsApi.md  HTTPValidationError.md  JsonApi.md  LocationInner.md  MultiResponseCollector.md  MultiResponseDataset.md  NexusApi.md  SortOrder.md  ValidationError.md  ValidationErrorLocInner.md
sds_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sds_client/api/: __init__.py  collectors_api.py  datasets_api.py  events_api.py  json_api.py  nexus_api.py
sds_client/models/: __init__.py  beam_info.py  collector.py  collector_id_list.py  datase_definition.py  dataset.py  http_validation_error.py  location_inner.py  multi_response_collector.py  multi_response_dataset.py  sort_order.py  validation_error.py  validation_error_loc_inner.py
test/: test_beam_info.py  test_collector.py  test_collector_id_list.py  test_collectors_api.py  test_datase_definition.py  test_dataset.py  test_datasets_api.py  test_events_api.py  test_http_validation_error.py  test_json_api.py  test_location_inner.py  test_multi_response_collector.py  test_multi_response_dataset.py  test_nexus_api.py  test_sort_order.py  test_validation_error.py  test_validation_error_loc_inner.py
